<resources>
    <string name="app_name">Chat &amp; Play for Lol</string>

    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="refresh">Refresh</string>
    <string name="title_activity_sub">SubActivity</string>

    <string name="drawer_opened">Opened</string>
    <string name="drawer_closed">Closed</string>

    <!--Drawer List Item Names-->
    <string name="navdrawer_item0">Dashboard</string>
    <string name="navdrawer_item1">Frieds List</string>
    <string name="navdrawer_item2">Message List</string>
    <string name="navdrawer_item3">My Recent Games</string>
    <string name="navdrawer_item4">Server Status</string>
    <string name="navdrawer_item5">Settings</string>

    <string name="youtube_title">Youtube</string>
    <string name="youtube_text">Lastest videos just now!</string>

    <string name="facebook_title">Facebook</string>
    <string name="facebook_text">Mark is nice!</string>

    <string name="twitter_title">Twitter</string>
    <string name="twitter_text">Twitch me Voyboy!</string>

    <string name="hi5_title">Hi5</string>
    <string name="hi5_text">Yo Four!</string>

    <string name="lol_title">League of Legends</string>
    <string name="lol_text">Caption Teemo on Duty!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_shard">Server Status</string>
    <string name="title_activity_dashboard">DashBoardActivity</string>

    <string name="hello_world">Hello world!</string>

    <!--LOGGED_IN ACTIVITY-->
    <string name="activity_login_login_title">Login</string>
    <string name="acitivty_login_username_hint">Username Here</string>
    <string name="activity_login_password_hint">Password Here</string>
    <string name="activity_login_label_connect_button">Connect</string>
    <string name="activity_login_checkbox_label">Save Credentials</string>
    <string name="activity_connection_failed">Connection to the server failed. Make sure you have internet connection.</string>
    <string name="activity_connection_lost">Connection to The Server was Lost!</string>
    <string name="activity_login_failed">Make sure your credentials and server are valid or try again later!</string>
    <string name="activity_login_progress_dialog_title">Attempting to Login</string>
    <string name="activity_login_progress_dialog_message">Please wait …</string>
    <string name="drawer_default_title">League of Legends \nFriends Alerter</string>
    <string name="drawer_default_username_prefix">Logged in as: %s</string>
    <string name="in_champion_select_for">In champion select for </string>
    <string name="in_champion_select">In champion select</string>

    <string name="in_queue_select_for">In queue for </string>
    <string name="in_queue_select">In queue</string>
    <string name="ingame_playing_as">Playing as</string>
    <string name="ingame_playing_as_for">for</string>
    <string name="minutes">minutes</string>
    <string name="friends_list_recycler_child_ranked_wins">Ranked\nWins</string>
    <string name="friends_online">"Friends Online: %s"</string>
    <string name="dashboard">Dashboard</string>
    <string name="log_activity">Latest Friend Activity</string>
    <string name="chatting_with">"Chatting with: %s"</string>
    <string name="cannot_chat_with">is Offline. Canno\'t chat with him/her atm</string>


    <string name="message_list_title">Last Friend\'s Messages</string>
    <string name="current_game_activity_title">Currently Spectating</string>
    <string name="recent_game_activity_title">Recent Games</string>
    <string name="shard_activity_title">Server Status</string>
    <string name="message_notification_title">New  Message From:</string>
    <string name="new_message">New Message</string>
    <string name="add_friend">Add Friend</string>
    <string name="search_friend">Search Friend</string>

    <string name="settings_when_app_visible">When LOLCHAT is visible:</string>
    <string name="settings_global_notifications_title">Global Notification Settings</string>
    <string name="settings_coming_soon">Coming soon …</string>
    <string name="settings_new_message_sound_notification">Enable Global Sound Notifications</string>
    <string name="settings_global_always_receive_notifications">Receive notifications even after LOLCHAT is closed </string>
    <string name="settings_new_message_text_notification">Enable Global Text Notifications</string>
    <string name="settings_when_app_background">When LOLCHAT is in background:</string>

    <string name="settings_custom_notif_online">is ONLINE</string>
    <string name="settings_custom_notif_offline">is OFFLINE</string>
    <string name="settings_custom_notif_start_game">has started a game</string>
    <string name="settings_custom_notif_end_game">has left a game</string>
    <string name="settings_custom_notif_message">has sent me a PM</string>


    <string name="add_friend_soon">Feature Coming Soon! Add friend in the client and use the refresh button to see new friends</string>
    <string name="drawer_logout_label">LOGOUT</string>
    <string name="settings_show_hide_offline">Show/Hide Offline</string>
    <string name="settings_order_alphabetically">Sort By Name</string>
    <string name="settings_order_status">Sort By Status</string>
    <string name="champion_name_here">Champion Name Here</string>
    <string name="current_game_live">Live Game</string>
    <string name="current_game_game_start">Game Start</string>
    <string name="current_game_general_info">General Info</string>
    <string name="current_game_ban_info">Ban Info</string>
    <string name="current_game_summoners">Summoners</string>
    <string name="current_game_your_team">Team 1</string>
    <string name="current_game_enemy_team">Team 2</string>
    <string name="current_game_summoner_not_in_game">Live Match not available. The game is no longer available.</string>
    <string name="current_game__fragment_title">Live: </string>
    <string name="recent_game__fragment_title">Recent Games for: %s</string>
    <string name="recent_game_me_fragment_title">My Recent Games</string>
    <string name="current_game_banned_c_error">I\'m sorry. We could not retrieve the banned champion list</string>

    <string name="shard_region_error">I\'m sorry. We could not retrieve the Status Info for %s</string>
    <string name="current_game_participants_error">I\'m sorry. We could not retrieve the summoners information</string>
    <string name="shard_game">Game</string>
    <string name="shard_store">Store</string>
    <string name="shard_website">Website</string>
    <string name="shard_forum">Forum</string>
    <string name="shard_chose_region">Chose Region:</string>

    <!--For recent game header-->
    <string name="game_win">WIN</string>
    <string name="game_loss">LOSS</string>
    <string name="recent_game_header_mode">Mode</string>
    <string name="recent_game_header_when">When</string>
    <string name="recent_game_header_position">Position</string>

    <!--ERRORS-->
    <string name="recent_game_not_found">Recent Games not available for this summoner!</string>
    <string name="recent_game_try_later">We couldn\'t retrieve the match information for this Summoner. Please try again later.</string>
    <string name="webservice_failed_retry">RETRY</string>

    <string name="current_game_not_found">Recent Games not available for this summoner!</string>
    <string name="free_champion_rotation">Free Champion Rotation</string>
    <string name="your_friend_is_offline">Friend Offline. Can\'t send Message</string>
    <string name="settings_activity">Settings</string>
    <string name="service_currently_unavailable">Service currently unavailable. Please try again later</string>
    <string name="feature_coming">\"Feature Coming in the next release\"</string>

    <string name="transition_toolbar">ToolbarTransition</string>

</resources>
