<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_0"
            android:checked="true"
            android:icon="@drawable/dashboard"
            android:title="@string/navdrawer_item0"/>
        <item
            android:id="@+id/navigation_item_1"
            android:checked="true"
            android:icon="@drawable/ic_face_white_24dp"
            android:title="@string/navdrawer_item1"/>
        <item
            android:id="@+id/navigation_item_2"
            android:icon="@drawable/ic_question_answer_white_24dp"
            android:title="@string/navdrawer_item2"/>
        <item
            android:id="@+id/navigation_item_3"
            android:icon="@drawable/ic_settings_white_24dp"
            android:title="@string/navdrawer_item4"/>

        <item
            android:id="@+id/navigation_item_4"
            android:icon="@drawable/ic_settings_white_24dp"
            android:title="@string/navdrawer_item3"/>

    </group>
</menu>