<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_screen"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:id="@+id/login_base_layout"
    tools:context="com.recoverrelax.pt.riotxmppchat.ui.activity.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/login_main_layout"
        android:background="@color/black"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="20dp"
        android:id="@+id/lol_logo"
        android:src="@drawable/lol_logo"
        android:layout_marginBottom="30dp"/>

        <LinearLayout
            android:id="@+id/login_bottom_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/loginBackgroundBlack"
            android:orientation="vertical"
            android:visibility="invisible"
            tools:visibility="visible"
            android:paddingLeft="@dimen/activity_login_margin_lr"
            android:paddingRight="@dimen/activity_login_margin_lr">

            <EditText
                style="@style/login_edittext"
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_login_button_margin_tp"
                android:layout_marginBottom="@dimen/activity_login_button_margin_tp"
                android:gravity="center_horizontal"
                android:hint="@string/acitivty_login_username_hint"
                android:inputType="textPersonName" />

            <EditText
                style="@style/login_edittext"
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:hint="@string/activity_login_password_hint"
                android:inputType="textPassword" />

            <Spinner
                android:id="@+id/serverSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.8"
                android:spinnerMode="dialog"
                android:background="@color/white"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/activity_login_spinner_margin_top"
                tools:listitem="@layout/spinner_layout" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.8"
                android:background="@color/white"
                android:paddingRight="10dp"
                android:layout_marginTop="@dimen/activity_login_checkbox_margin_top"
                android:text="@string/activity_login_checkbox_label" />

            <Button
                android:id="@+id/connect"
                style="@style/ButtonLogin"
                android:alpha="0.8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/activity_login_button_margin_tp"
                android:layout_marginBottom="@dimen/activity_login_button_margin_tp"
                android:text="@string/activity_login_label_connect_button" />

        </LinearLayout>
</LinearLayout>
</LinearLayout>
